# HeadlightBlocker

./: .gitignore  LICENSE  README.md  lcd_layout_dxf.py  passive_matrix_lcd_simulator.html  pixel_pattern_blur_simulator.html  prototype.html  stepper_OneStepAtATime.cpp  stepper_serial_wasd.cpp  three_steppers.cpp  three_steppers_math.cpp
.github/workflows/: build.yml
esp32cam_brightspots/esp32cam_sunspots_onewire/: build_output.txt  platformio.ini
esp32cam_brightspots/esp32cam_sunspots_onewire/src/: app_httpd.cpp  app_httpd.cpp_old  camera_pins.h  main.cpp  main.cpp.old  main_old
lcd_arduino_poc/: platformio.ini
lcd_arduino_poc/src/: main.cpp
lcd_basic_arduino/lcd_basic_arduino/: platformio.ini
lcd_basic_arduino/lcd_basic_arduino/src/: main.cpp
lcd_graphical_esp32_arduino_poc/: platformio.ini
lcd_graphical_esp32_arduino_poc/lib/lights_protocol/src/: lights_protocol.cpp
lcd_graphical_esp32_arduino_poc/src/: main.cpp  main_unit_testing.h
lcd_graphical_esp32_arduino_poc/test/test_gtest/: test_main.cpp
lcd_segment_testing/: platformio.ini
lcd_segment_testing/src/: main.cpp
led_sense/src/: main.cpp
rust/: Cargo.toml  LICENSE
rust/src/: example_cam.rs  lib.rs
